<resources>
    <string name="app_name">Telepuz</string>
    <string name="slogan">Алё, ну че там с деньгами?</string>
    <string name="nickname_input_hint">Вот она правда!</string>
    <string name="nickname_input_header">Никнейм</string>
    <string name="auth_enter_button_text">Войти</string>
    <string name="auth_loading_button_text">Загрузка…</string>
    <string name="sign">Made for fun with love</string>
    <string name="no_internet_connection">Кажется Ваш интернет принял иудаизм…</string>
    <string name="connecting">Подключение...</string>
    <string name="oops">Упс :0</string>
</resources>